<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>no.nav.bidrag</groupId>
	<artifactId>bidrag-behandling-felles</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>bidrag-behandling-felles</name>
	<description>Inneholder enums/konstanter og funksjonalitet som er felles for flere repositories ifbm behandling av bidrag</description>

	<properties>
		<java.version>17</java.version>
		<kotlin.version>1.6.10</kotlin.version>
    <build-helper-maven.version>3.2.0</build-helper-maven.version>
  </properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-reflect</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

<!--	<build>-->
<!--		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>-->
<!--		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>-->
<!--		<plugins>-->
<!--			<plugin>-->
<!--				<groupId>org.springframework.boot</groupId>-->
<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>org.jetbrains.kotlin</groupId>-->
<!--				<artifactId>kotlin-maven-plugin</artifactId>-->
<!--				<configuration>-->
<!--					<args>-->
<!--						<arg>-Xjsr305=strict</arg>-->
<!--					</args>-->
<!--					<compilerPlugins>-->
<!--						<plugin>spring</plugin>-->
<!--					</compilerPlugins>-->
<!--				</configuration>-->
<!--				<dependencies>-->
<!--					<dependency>-->
<!--						<groupId>org.jetbrains.kotlin</groupId>-->
<!--						<artifactId>kotlin-maven-allopen</artifactId>-->
<!--						<version>${kotlin.version}</version>-->
<!--					</dependency>-->
<!--				</dependencies>-->
<!--			</plugin>-->
<!--		</plugins>-->
<!--	</build>-->

  <build>
    <plugins>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>process-resources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <sourceDirs>
                <source>src/main/kotlin</source>
              </sourceDirs>
            </configuration>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <jvmTarget>1.8</jvmTarget>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>testCompile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>${build-helper-maven.version}</version>
        <executions>
          <execution>
            <id>remove-old-artifacts</id>
            <phase>package</phase>
            <goals>
              <goal>remove-project-artifact</goal>
            </goals>
            <configuration>
              <removeAll>true</removeAll>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>
